Modal rate window improved, bugs with flickering fixed

--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -37,7 +37,8 @@ nav {
   top: 0;
   right: 0;
   height: 5em;
-  width: 2em;
+  width: 1em;
+  margin-right: 1.4rem;
   background-color: transparent;
   pointer-events: none;
   mix-blend-mode: initial;
